Correct navbar height on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ button:focus-visible {
 .main-navbar{
   background-color: #072841;
   /* margin-right: 10px ; */
-  height: 13%;
+  height: 10%;
 }
 
 .hero-text{
